[UPT] First parameter filter function WORKS XD

--- a/templates/filter.html
+++ b/templates/filter.html
@@ -12,6 +12,8 @@
         <p>3: Et en fonction, du nombre de résultat que vous voulez voir affiché</p>
         <p>===========================================================</p>
         <form method="POST" action="/filter">
+            <input type="text" name="nom_propriété" placeholder="nom de la proriété (si tu cherches une valeur spécifique)" value="">
+            <input type="text" name="valeur_propriété" placeholder="valeur de la proriété" value="">
             <button type="submit"></button>
         </form>
     </body>
