--- a/templates/filter.html
+++ b/templates/filter.html
@@ -12,8 +12,12 @@
         <p>3: Et en fonction, du nombre de résultat que vous voulez voir affiché</p>
         <p>===========================================================</p>
         <form method="POST" action="/filter">
+            Option 1: Voulez-vous chercher une valeur ? (Laisser blanc si, non)<p></p>
             <input type="text" name="nom_propriété" placeholder="nom de la proriété (si tu cherches une valeur spécifique)" value="">
-            <input type="text" name="valeur_propriété" placeholder="valeur de la proriété" value="">
+            <input type="text" name="valeur_propriété" placeholder="valeur de la proriété" value=""><p></p>
+            Option 2: Voulez-vous y mettre de l'ordre ? (Laisser blanc si, non)<p></p>
+            Voici les ordres : Alphabétique (1) Antéalphabétique (2) Date Croissant (3) Date Décroissant (4)
+            <input type="text" name="ordre" placeholder="écrit un ordre." value=""> <p></p>
             <button type="submit"></button>
         </form>
     </body>
