[UPT] 3nd paramter works

--- a/templates/filter.html
+++ b/templates/filter.html
@@ -16,8 +16,10 @@
             <input type="text" name="nom_propriété" placeholder="nom de la proriété (si tu cherches une valeur spécifique)" value="">
             <input type="text" name="valeur_propriété" placeholder="valeur de la proriété" value=""><p></p>
             Option 2: Voulez-vous y mettre de l'ordre ? (Laisser blanc si, non)<p></p>
-            Voici les ordres : Alphabétique (1) Antéalphabétique (2) Date Croissant (3) Date Décroissant (4)
+            Voici les ordres : Alphabétique (1) Antéalphabétique (2) Date Croissant (3) Date Décroissant (4)<p></p>
             <input type="text" name="ordre" placeholder="écrit un ordre." value=""> <p></p>
+            Option 3: Voulez-vous y mettre une limite d'affichage ? (Laisser blanc si, non)<p></p>
+            <input type="text" name="limit" placeholder="un nombre" value=""> <p></p>
             <button type="submit"></button>
         </form>
     </body>
